--- a/.env
+++ b/.env
@@ -5,14 +5,15 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # Dev
-# DATABASE_URL="postgresql://postgres:postgres@localhost:5432/test?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/test?schema=public"
+DIRECT_URL_URL="postgresql://postgres:postgres@localhost:5432/test?schema=public"
 
 # Prod
 # Connect to Supabase via connection pooling with Supavisor.
-DATABASE_URL="postgresql://postgres.ujlcvdmelkencllobvtl:admin@aws-0-eu-west-3.pooler.supabase.com:6543/postgres?pgbouncer=true"
+# DATABASE_URL="postgresql://postgres.ujlcvdmelkencllobvtl:admin@aws-0-eu-west-3.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
 # Direct connection to the database. Used for migrations.
-DIRECT_URL="postgresql://postgres.ujlcvdmelkencllobvtl:admin@aws-0-eu-west-3.pooler.supabase.com:5432/postgres"
+# DIRECT_URL="postgresql://postgres.ujlcvdmelkencllobvtl:admin@aws-0-eu-west-3.pooler.supabase.com:5432/postgres"
 
 NEXT_PUBLIC_MAIN_URL=http://localhost:3000
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
